<resources>
    <string name="app_name">TheQuiz</string>
    <string name="action_settings">Settings</string>

    <string name="animals">ANIMALS </string>
    <string name="title_activity_animals_question_one">Category: Animals</string>
    <string name="animals_qn_1">Which animal is known as the king of the jungle ?</string>
    <string name="animals_qn_2">The lion belongs to which Animal family ?</string>
    <string name="animals_qn_3">Which is the fastest land animal ?</string>
    <string name="animals_qn_4">Which of the following are  domestic animals ?</string>
    <string name="animals_qn_5">Which animal is not among the big five ?</string>

    <string name="animals_question1">QUESTION ONE</string>
    <string name="animals_question2">QUESTION TWO</string>
    <string name="animals_question3">QUESTION THREE</string>
    <string name="animals_question4">QUESTION FOUR</string>
    <string name="animals_question5">QUESTION FIVE</string>

    <string name="animals_qn1_ansA">A. Elephant</string>
    <string name="animals_qn1_ansB">B. Wild Beast</string>
    <string name="animals_qn1_ansC">C. Lion</string>
    <string name="animals_qn1_ansD">D. Giraffe</string>

    <string name="animals_qn2_ansA">A. Zebra Family</string>
    <string name="animals_qn2_ansB">B. Bird Family</string>
    <string name="animals_qn2_ansC">C. Cat Family</string>
    <string name="animals_qn2_ansD">D. Human Family</string>

    <string name="animals_qn3_ansA">A. Cheater</string>
    <string name="animals_qn3_ansB">B. Baboon</string>
    <string name="animals_qn3_ansC">C. Cat</string>
    <string name="animals_qn3_ansD">D. Zebra</string>

    <string name="animals_qn4_ansA">A. Zebra</string>
    <string name="animals_qn4_ansB">B. Lion</string>
    <string name="animals_qn4_ansC">C. Cow</string>
    <string name="animals_qn4_ansD">D. Dog</string>

    <string name="animals_qn5_ansA">A. African Bush Elephant</string>
    <string name="animals_qn5_ansB">B. Rhino</string>
    <string name="animals_qn5_ansC">C. Leopard</string>
    <string name="animals_qn5_ansD">D. Giraffe</string>

    <string name="nweplayer">Enter Player Name:</string>
    <string name="submit">Submit</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="animals_question6">Question Six</string>
    <string name="animals_qn_6">Who is the Fourth President of Kenya ?</string>
    <string name="general_qn6_ansA">A. Mzee Jomo Kenyatta</string>
    <string name="general_qn6_ansB">B. Daniel T Atap Moi</string>
    <string name="general_qn6_ansC">C. Mwai Kibaki</string>
    <string name="general_qn6_ansD">D. Uhuru Kenyatta</string>

</resources>
